Avoid image overflow

--- a/src/style.less
+++ b/src/style.less
@@ -27,6 +27,10 @@ a {
     color: @tint;
 }
 
+img {
+    max-width: 100%;
+}
+
 blockquote {
     position: relative;
     margin-right: 0;
